--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>TIE BA FE HELPER </title>
+	<script type="text/javascript" src="jquery1.7.2.js"></script>
 	<script type="text/javascript" src="popup.js"></script>
 	<style type="text/css">
 		p{
@@ -28,7 +29,6 @@
 		</select>
 		<button class="btn">点击</button>
 	</p>
-	
 	
 </body>
 </html>
