remove some unless code

--- a/page_popup.html
+++ b/page_popup.html
@@ -52,13 +52,11 @@
 <body>
 	<div class="body">
 		<header class="title text-center">
-			<h3>Quick Login Or Logout</h3>
+			<h3>Quick Switch Account</h3>
 		</header>
 		<section class="display-block p_a_20">
 			<select id="sel" class="sel w_160 h_40 f-20">
-				<!-- <option value="maling____aaaa">maling</option>
-				<option value="小波波____aaaa">小波波</option>
-				<option value="abc____aaaa">abc</option> -->
+		
 			</select>
 		</section>
 		<button class="btn j_Loginbtn display-block">快速切换</button>
